feat(devtools): add devtools gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,12 @@ renderer/flutter/core/lib/*
 
 renderer/native/android/src/main/jni/lib/*
 
+devtools/devtools-backend/lib/*
+devtools/devtools-backend/libs/*
+devtools/devtools-backend/test/build/*
+devtools/devtools-backend/android/devtools-backend/*
+
+
 # android
 *.iml
 local.properties
