--- a/driver/js/flutter/android/build.gradle
+++ b/driver/js/flutter/android/build.gradle
@@ -79,7 +79,7 @@ android {
         externalNativeBuild {
             cmake {
                cppFlags "-std=c++17"
-               arguments "-DANDROID_TOOLCHAIN=clang", "-DANDROID_STL=c++_shared"
+               arguments "-DANDROID_TOOLCHAIN=clang", "-DANDROID_STL=c++_shared", "-DENABLE_INSPECTOR=$ENABLE_INSPECTOR"
             }
         }
     }
