feat(devtools): fix devtools enable switch

--- a/framework/js/android/gradle.properties
+++ b/framework/js/android/gradle.properties
@@ -123,6 +123,9 @@ EXCLUDE_LIBRARY_FILES=
 ENABLE_SO_DOWNLOAD=false
 INCLUDE_SUPPORT_UI=true
 
+#devtool eanble
+TDF_SERVICE_ENABLED=1
+
 #maven central publish params
 PUBLISH_ARTIFACT_ID=hippy-common
 #PUBLISH_ARTIFACT_ID=hippy-debug
