--- a/framework/js/android/build.gradle
+++ b/framework/js/android/build.gradle
@@ -99,7 +99,6 @@ android {
                   "-DANDROID_CPP_FEATURES=rtti exceptions",
                   "-DANDROID_PLATFORM=android-21",
                   "-DCMAKE_BUILD_TYPE=Release",
-                  "-DTDF_SERVICE_ENABLED=0",
                   "-DANDROID_STL=$ANDROID_STL",
                   "-DV8_COMPONENT=$V8_COMPONENT_RELEASE",
                   "-DHIDDEN_LIBRARY_SYMBOL=$HIDDEN_LIBRARY_SYMBOL"
@@ -127,7 +126,7 @@ android {
                   "-DANDROID_CPP_FEATURES=rtti exceptions",
                   "-DANDROID_PLATFORM=android-21",
                   "-DCMAKE_BUILD_TYPE=Debug",
-                  "-DTDF_SERVICE_ENABLED=1",
+                  "-DTDF_SERVICE_ENABLED=$TDF_SERVICE_ENABLED",
                   "-DANDROID_STL=$ANDROID_STL",
                   "-DV8_COMPONENT=$V8_COMPONENT_DEBUG",
                   "-DHIDDEN_LIBRARY_SYMBOL=$HIDDEN_LIBRARY_SYMBOL"
