--- a/driver/js/android/gradle.properties
+++ b/driver/js/android/gradle.properties
@@ -120,8 +120,8 @@ EXCLUDE_LIBRARY_FILES=
 ENABLE_SO_DOWNLOAD=false
 INCLUDE_SUPPORT_UI=true
 
-#devtool eanble
-TDF_SERVICE_ENABLED=1
+#if devtool features eanble, please set true, otherwise set false
+TDF_SERVICE_ENABLED=true
 
 #maven central publish params
 PUBLISH_ARTIFACT_ID=hippy-common
