feat(devtools): rename TDF_SERVICE_ENABLE to ENABLE_INSPECTOR

--- a/driver/js/android/gradle.properties
+++ b/driver/js/android/gradle.properties
@@ -121,7 +121,7 @@ ENABLE_SO_DOWNLOAD=false
 INCLUDE_SUPPORT_UI=true
 
 #if devtool features eanble, please set true, otherwise set false
-TDF_SERVICE_ENABLED=true
+ENABLE_INSPECTOR=true
 
 #maven central publish params
 PUBLISH_ARTIFACT_ID=hippy-common
